# ulf-posix-template

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/actions/reactor-uc/: action.yml
.github/scripts/: run-all.sh
.github/workflows/: ci.yml
src/: BankInitialization.ulf  BankInitializationParams.csv  HelloPosix.ulf  Timer.ulf
util/: initialize_from_file.c  initialize_from_file.cmake  initialize_from_file.h
